--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,56 @@
-.App {
-  text-align: center;
+.My-page {
+    width: 600px;
+}
+
+.My-left-bar {
+    width: 30%;
+    float: left;
+}
+
+.My-right-bar {
+    width: 60%;
+    float: left;
+}
+
+.My-button {
+    text-align: center;
+    color: white;
+    background: pink;
+    margin: 20px;
+    border-style: solid;
+    border-color: black;
+}
+
+.My-title {
+    text-align: center;
+    color: white;
+    background: green;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.My-text {
+    text-align: left;
+    color: white;
+    background: blue;
+    width: 100%;
+    height: 180px;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
